--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,8 @@ html{
 body{
     background-color: #f0fdf4;
     display: grid;
-    /* grid-template-columns: 1fr 3fr 1fr; */
-    grid-template-rows: 250px 2fr 1fr;
+    grid-template-columns: 250px 3fr 1fr; 
+    grid-template-rows: 175px 1fr 1fr;
 }
 
 header{
@@ -37,6 +37,9 @@ h2{
     margin: 0;
 }
 
+h3{
+    padding: 0;
+}
 
 .searchBar{
     display: flex;
@@ -85,11 +88,11 @@ input[type="search"]:focus {
 .userImage{
     border-radius: 50%;
     height: auto;
-    width: 5rem;
+    width: 3rem;
 }
 
 .bellIcon{
-    margin-top:1.5rem ;
+    margin-top:0.5rem ;
     justify-self: end;
 }
 
@@ -98,7 +101,6 @@ input[type="search"]:focus {
     display: flex;
     color: var(--headings-color);
     font-weight: 600;
-    /* margin-left: 1rem; To make the mediabox look aligned with the searchbar inside the header */
 }
 
 .mediaBox img{
@@ -106,7 +108,7 @@ input[type="search"]:focus {
     padding-top:10px;
     display: flex;
     width: auto;
-    height:7rem;
+    height:5rem;
     margin: 0 30px;
 }
 
@@ -152,23 +154,134 @@ input[type="search"]:focus {
 }
 
 .articleSection{
-    display: grid;
-    grid-row: 2/4;
+    display: flex;
+    flex-direction: column;
     grid-template-columns:repeat(2, 1fr) ;
-    gap: 20px;
+    gap: 25px;
+    grid-row: 2/4;
+    padding: 0 1.5rem 1.5rem 1.5rem;
+    /* position: relative;
+    bottom: 30px; */
 }
 
 .article{
-    box-shadow: 0px 0px 32px 0px rgba(0,0,0,0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
     background: white;
+    border-left: 10px solid yellowgreen;
+    border-radius: 5px;
+    height: 200px;
+    padding: 20px;
 }
+
+.article img{
+    height: auto;
+    width: 20px;
+    margin-left:20px ;
+}
+
+.articleIcons{
+    align-self: flex-end;
+}
+
+.articlesContainer{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 25px;
+    position: relative;
+    bottom: 30px;
+}
+
 
 .menuItemsGridOne, .menuItemsGridTwo{
     margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .menuItemsGridZero{
     margin-top:20px;
     display: flex;
     align-items: center;
+}
+
+.menuItems{
+    font-weight: 600;
+    margin-top: 15px;
+}
+
+.menuItems img{
+    margin-right: 20px;
+    height: 20px;
+    width: auto;
+    position: relative;
+    top: 4px;
+}
+
+.announcementGrid{
+    display: flex;
+    position: relative;
+    bottom: 10px;
+    justify-content: space-around;
+    flex-direction:column ;
+    width: 250px;
+    height: fit-content;
+    background: white;
+    padding:1rem 1rem 1rem 1rem;
+    border-radius: 5px;
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
+    margin: 25px 20px 0 0;
+}
+
+
+.announcement{
+    border-top: 1px solid #999;
+    font-size: 12px;
+    overflow: ellipsis;
+    margin: 10px 0;
+}
+
+.announcement:nth-child(1){
+    border: none;
+}
+
+.trendingGrid{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    bottom: 45px;
+    margin: 25px 20px 0 0;
+    height: fit-content;
+}
+
+.trendingGrid .mediaBox{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    font-size: 0.5rem;
+}
+
+.trendingGrid p{
+    font-size: 1rem;
+    font-weight: 400;
+    margin: 0;
+}
+
+.trendingContents{
+    font-size: 12px;
+    width: 250px;
+    background: white;
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
+    padding:2rem 1rem 0rem 1rem;
+    border-radius: 5px;
+}
+
+.trendingContents > .mediaBox img{
+    height: auto;
+    width: 3rem;
+    position: relative;
+    bottom: 30px;
+    margin: 10px 10px 10px 10px;
 }
